[package]
name = "test-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json", "secrets"]}
rocket_cors = "0.6"
diesel = { version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15"
serde = "1.0.136"
chrono = "0.4"